# cpp-service-skelaton

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
include/: ServiceConfig.h.in
modules/: FindAPR.cmake  FindActiveMqCpp.cmake  FindApr.cmake
src/cms/: CMakeLists.txt  Cms.cpp  HelloWorldConsumer.cpp  HelloWorldProducer.cpp
src/cms/include/: Cms.h  Cms.hpp  HelloWorldConsumer.hpp  HelloWorldProducer.hpp
src/math_functions/: CMakeLists.txt  mathFunctions.cpp
src/math_functions/include/: mathFunctions.h
src/rpc/: CMakeLists.txt
src/rpc/client/: greeter_async_client.cpp  greeter_client.cpp
src/rpc/include/: greeter_async_client.h  greeter_async_server.h
src/rpc/server/: greeter_async_server.cpp  greeter_server.cpp
test/: setup.cmake
test/common/: CMakeLists.txt  adhoc_threads.cpp  adhoc_threads.h  dbg.h
test/json/: CMakeLists.txt  jsonTest.cpp
test/math_functions/: CMakeLists.txt  mathFunctionsTest.cpp
test/rpc_async/: CMakeLists.txt  async_gRPC_test.cpp
